JVM之七大垃圾收集器,CPU占用过高分析思路和定位以及linux的一些高级命令.